--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,21 +1,25 @@
 .footer {
-  background-color: #111;
-  padding: 20px;
-  text-align: center;
+  background-color: #000;
+  color: #fff;
+  padding: 1px;
+  text-align: right;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 .footer-icons {
   display: flex;
-  justify-content: center;
+  justify-content: right;
   margin-top: 20px;
 }
 
 .footer-icon {
   width: 24px;
   height: 24px;
-  margin: 0 10px;
+  margin: 0 5px;
 }
 
 .footer-icon:hover {
-  opacity: 0.7;
+  opacity: 0.8;
 }
