--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,24 +1,16 @@
 .navbar {
-  background-color: #111;
   padding: 20px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
-.navbar-logo {
-  color: #fff;
-  font-size: 24px;
-  text-decoration: none;
-}
-
-.navbar-items {
+.navbar-list {
+  list-style: none;
   display: flex;
-  align-items: center;
 }
 
 .navbar-item {
-  margin-left: 20px;
+  margin-right: 20px; /* Adjust the margin to create spacing between items */
 }
 
 .navbar-item a {
@@ -27,7 +19,13 @@
   font-size: 16px;
   transition: color 0.3s ease;
 }
-
-.navbar-item a:hover {
-  color: #ccc;
+.navbar-item navbar-item-bio {
+  align-items: left;
 }
+.navbar-item navbar-item-projects {
+  align-items: center;
+}
+.navbar-item navbar-item-resume {
+  align-items: right;
+}
+
