--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -37,7 +37,7 @@
 
 .project-screenshot img {
   width: 100%;
-  max-width: 300px; /* Adjust the maximum width as needed */
+  max-width: 300px;
   border-radius: 4px;
 }
 
