--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@ body {
 .app-container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Ensure the container takes at least the full viewport height */
+  min-height: 100vh;
 }
 .container {
   padding: 60px;
