--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,7 +3,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 0;
   }
+  
   
   .header-content {
     display: flex;
@@ -11,7 +13,7 @@
     justify-content: center;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 10px;
   }
   
   .header-text {
@@ -38,4 +40,5 @@
     object-fit: cover;
     border-radius: 50%;
   }
+
   
